# learnopengl_but_its_wgpu

./: Cargo.toml
00-getting-started/01-hello-triangle/: exercise-2.rs  exercise-3.rs  main.rs  rectangle.rs  shader.frag  shader.vert  shader_2.frag
00-getting-started/03-textures/: exercise-1.frag  exercise-1.rs  exercise-2.frag  exercise-2.rs  main.rs  shader.frag  shader.vert
00-getting-started/04-transformations/: main.rs  shader.frag  shader.vert
01-lighting/00-colors/: main.rs  shader.frag  shader.vert
01-lighting/01-basic-lighting/: light_source.frag  light_source.vert  main.rs  shader.frag
01-lighting/02-materials/: main.rs  shader.frag  shader.vert
01-lighting/03-lighting-maps/: main.rs  shader.frag  shader.vert
01-lighting/05-multiple-lights/: main.rs  shader.frag
src/: lib.rs  main.rs
