[package]
name = "learnopengl_but_its_wgpu"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

# Getting Started

## Hello Triangle

[[bin]]
name = "00-01-hello-triangle"
path = "00-getting-started/01-hello-triangle/main.rs"

[[bin]]
name = "00-01-hello-triangle-rectangle"
path = "00-getting-started/01-hello-triangle/rectangle.rs"

[dependencies]
image = { version = "0.23.0", default-features = false, features = ["png", "jpeg"] }
shaderc = "0.6.1"
ultraviolet = "0.4.5"
wgpu = "0.4.0"
winit = "0.21.0"
