[package]
name = "learnopengl_but_its_wgpu"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

# Getting Started

## Hello Triangle

[[bin]]
name = "00-01-hello-triangle"
path = "00-getting-started/01-hello-triangle/main.rs"

[[bin]]
name = "00-01-hello-triangle-rectangle"
path = "00-getting-started/01-hello-triangle/rectangle.rs"

[[bin]]
name = "00-01-hello-triangle-exercise-2"
path = "00-getting-started/01-hello-triangle/exercise-2.rs"

[[bin]]
name = "00-01-hello-triangle-exercise-3"
path = "00-getting-started/01-hello-triangle/exercise-3.rs"

## Textures

[[bin]]
name = "00-03-textures"
path = "00-getting-started/03-textures/main.rs"

[dependencies]
image = { version = "0.23.0", default-features = false, features = ["png", "jpeg"] }
shaderc = "0.6.1"
ultraviolet = "0.4.5"
wgpu = "0.4.0"
winit = "0.21.0"
