[package]
name = "learnopengl_but_its_wgpu"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

# Getting Started

## Hello Triangle

[[bin]]
name = "00-01-hello-triangle"
path = "00-getting-started/01-hello-triangle/main.rs"

[[bin]]
name = "00-01-hello-triangle-rectangle"
path = "00-getting-started/01-hello-triangle/rectangle.rs"

[[bin]]
name = "00-01-hello-triangle-exercise-2"
path = "00-getting-started/01-hello-triangle/exercise-2.rs"

[[bin]]
name = "00-01-hello-triangle-exercise-3"
path = "00-getting-started/01-hello-triangle/exercise-3.rs"

## Textures

[[bin]]
name = "00-03-textures"
path = "00-getting-started/03-textures/main.rs"

[[bin]]
name = "00-03-textures-exercise-1"
path = "00-getting-started/03-textures/exercise-1.rs"

[[bin]]
name = "00-03-textures-exercise-2"
path = "00-getting-started/03-textures/exercise-2.rs"

## Transformations

[[bin]]
name = "00-04-transformations"
path = "00-getting-started/04-transformations/main.rs"

# Lighting

## Colors

[[bin]]
name = "01-00-colors"
path = "01-lighting/00-colors/main.rs"

## Basic Lighting

[[bin]]
name = "01-01-basic-lighting"
path = "01-lighting/01-basic-lighting/main.rs"

## Materials

[[bin]]
name = "01-02-materials"
path = "01-lighting/02-materials/main.rs"

## Lighting maps

[[bin]]
name = "01-03-lighting-maps"
path = "01-lighting/03-lighting-maps/main.rs"

[dependencies]
amethyst_input = { git = "https://github.com/maroider/amethyst/", branch = "amethyst_input-decoupling-and-update-winit", default-features = false }
image = { version = "0.23.0", default-features = false, features = ["png", "jpeg"] }
shaderc = "0.6.1"
shrev = "1.1.1"
ultraviolet = "0.4.5"
wgpu = "0.4.0"
winit = "0.21.0"
